--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <h1>Madhuja's Portfolio</h1>
         <h2>I am a web developer and here are my projects</h2>
         <hr />
-        <h2><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h2>
-        <img src="./assets/MovieRanking.png" height="300" alt="movie ranking project preview">
+        <h2><a href="../2.4 Movie Ranking Project/">Movie Ranking Project</a></h2>
+        <img src="./assets/movie-rankings.png" height="300" alt="movie ranking project preview">
 
         <h2><a href="../3.4 Birthday Invite Project/">Birthday Invitation</a></h2>
-        <img src="./assets/BirthdayInvite.png " height="300" alt="birthday invitation project preview">
+        <img src="./assets/birthday-invitation.png " height="300" alt="birthday invitation project preview">
 
         <a href="./public/contact.html">Contact here</a>
    </body>
